# CMakeTestTemplate

./: CMakeLists.txt  ReadMe.md
app/: CMakeLists.txt  main.cpp
patterns/: CMakeLists.txt
patterns/src/: patterns.cpp
patterns/tests/: sumTest.cpp
